Fix ellipsis blurring issue of stalin.css
关闭ellipsis功能后，显示的多行标题的行间距，与两个标题之间的行间距一致，导致难以直接区分一个标题的行 还是一个多行标题。

通过该css样式修改，微调缩小了多行标题的行间距，并通过补偿两个标题之间的行间距使其与原来一样。使得两个多行标题更容易区分。

--- a/src/stalin.css
+++ b/src/stalin.css
@@ -22,7 +22,9 @@
 }
 
 .quiet-outline .n-tree-node-content__text p {
-    margin: 0;
+  line-height: 1.2em; /* 调整原始段落行距 */
+  margin-top: 2.6px;  /* 微调段落上方的间距使与改line-height前一致 */
+  margin-bottom: 2.6px;  /* 微调段落下方的间距使与改line-height前一致 */
 }
 
 /* ellipsis */
